--- a/mcp_servers/bigquery/bigquery.yaml
+++ b/mcp_servers/bigquery/bigquery.yaml
@@ -4,7 +4,7 @@ sources:
     project: hundred-agents25waw-845
 
 tools:
-  search_release_notes_bq:
+  product_retrieval_bq:
     kind: bigquery-sql
     description: |
       Use this tool to get information on customer orders, based on two parameters, the order ID and the product name.
@@ -18,6 +18,7 @@ tools:
     statement: |
       SELECT 
         o.order_id, 
+        o.customer_id,
         oi.quantity, 
         p.product_name, 
         p.product_id    
@@ -30,7 +31,30 @@ tools:
       WHERE o.order_id = @order_id AND lower(p.product_name) LIKE lower(concat('%', @product_name, '%'));
     source: my-bq-source
     
+  insert_voucher_bq:
+    kind: bigquery-sql
+    description: |
+      Use this tool to insert the voucher information to bigquery.
+    parameters:
+     - name: voucher_id
+       type: number
+       description: generated voucher id
+     - name: customer_id
+       type: string
+       description: The customer_id supplied by the user.
+     - name: order_id
+       type: string 
+       description: The order_id supplied by the user.
+     - name: total_amount
+       type: number
+       description: The value of the voucher.
+    statement: |
+      INSERT INTO customer_data.Vouchers (voucher_id, customer_id, order_id, total_amount) VALUES (@voucher_id, @customer_id , @order_id , @total_amount);
+    source: my-bq-source
+
 
 toolsets:
   my_bq_toolset:
-  - search_release_notes_bq
+  - product_retrieval_bq
+  - insert_voucher_bq
+  
